# hudson_solo_module

./: .gitignore  .justfile  .pre-commit-config.yaml  README.md  pyproject.toml
Solo_Client/: App.config  SoloNode.cs  SoloRestServer.cs  Solo_Client.cs  Solo_Client.csproj  packages.config  utils.cs
definitions/: hudson_solo.node.info.yaml  hudson_solo.node.yaml  hudson_solo_node_def.info.yaml
hudson_solo_module/: __init__.py  solo_interface.py  solo_node.py
hudson_solo_node/: Solo_Client.sln
hudson_solo_node/Solo_Client/: Solo_Client.cs
src/: solo_module.py  solo_node.py
src/solo_interface/: solo_interface.py
workcells/: test.workcell.yaml
