[project]
name = "hudson_solo_module"
version = "2.0.0"
description = "MADSci Node Module for controlling the Hudson SOLO liquidhandler via SOLOSoft"
authors = [{name = "Casey Stone", email="cstone@anl.gov"}]
dependencies = [
    "madsci.node_module>=0.3.0",
    "pythonnet",
]
requires-python = ">=3.12,<3.13"
readme = "README.md"
license = {text = "MIT"}

[project.urls]
homepage = "https://github.com/AD-SDL/hudson_solo_module"

[dependency-groups]
dev = [
    "pre-commit>=4.2.0",
]
